@@ -34,17 +34,24 @@ struct _HTMLStyle {
 
 	/* Block Level */
 	HTMLHAlignType      text_align;
+	
+	/* bg settings */
+	char     *bg_image;
+	GdkColor *bg_color;
 };	
 
 
-HTMLStyle *html_style_new               (void);
-HTMLStyle *html_style_unset_decoration  (HTMLStyle *style, GtkHTMLFontStyle decoration);
-HTMLStyle *html_style_set_decoration    (HTMLStyle *style, GtkHTMLFontStyle decoration);
-HTMLStyle *html_style_set_size          (HTMLStyle *style, GtkHTMLFontStyle size);
-HTMLStyle *html_style_add_text_align    (HTMLStyle *style, HTMLHAlignType type);
-HTMLStyle *html_style_add_font_face     (HTMLStyle *style, const HTMLFontFace *face);
-HTMLStyle *html_style_add_color         (HTMLStyle *style, HTMLColor *face);
-HTMLStyle *html_style_add_attribute     (HTMLStyle *style, char *attr);
-void       html_style_free              (HTMLStyle *);
+HTMLStyle *html_style_new                  (void);
+HTMLStyle *html_style_unset_decoration     (HTMLStyle *style, GtkHTMLFontStyle decoration);
+HTMLStyle *html_style_set_decoration       (HTMLStyle *style, GtkHTMLFontStyle decoration);
+HTMLStyle *html_style_set_font_size        (HTMLStyle *style, GtkHTMLFontStyle decoration);
+HTMLStyle *html_style_set_size             (HTMLStyle *style, GtkHTMLFontStyle size);
+HTMLStyle *html_style_add_text_align       (HTMLStyle *style, HTMLHAlignType type);
+HTMLStyle *html_style_add_font_face        (HTMLStyle *style, const HTMLFontFace *face);
+HTMLStyle *html_style_add_color            (HTMLStyle *style, HTMLColor *face);
+HTMLStyle *html_style_add_attribute        (HTMLStyle *style, const char *attr);
+HTMLStyle *html_style_add_background_image (HTMLStyle *style, const char *url);
+HTMLStyle *html_style_add_background_color (HTMLStyle *style, GdkColor *color);
+void       html_style_free                 (HTMLStyle *style);
 
 #endif /* __HTML_COLOR_H__ */
