@@ -1,3 +1,11 @@
+2002-12-16  Larry Ewing  <lewing@ximian.com>
+
+	* htmlstyle.h: add prototypes. 
+
+	* htmlstyle.c (html_style_add_background_image): add background
+	iumage property.
+	(html_style_add_background_color): add background color property.
+
 2002-12-14  Larry Ewing  <lewing@ximian.com>
 
 	* htmlimage.c (html_image_factory_register): make sure we add an
